--- a/src/App.css
+++ b/src/App.css
@@ -19,23 +19,50 @@
   display: flex;
   margin-left: auto;
   margin-right: 10px;
-  justify-content: space-between;
-  gap: 2px;
 }
 
 .navRightIcons button {
   background-color: #111111;
   width: 40px;
   height: 40px;
-  display: inline-block;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 4px;
 }
 
-.navRightIcons button img{
-  margin: auto;
-  vertical-align: auto;
-  width: 40px;
-  height: 40px;
+.navRightIcons button img {
+  padding: 1px;
+  width: 35px;
+  height: 35px;
+}
+
+.navLeftTabs {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1px;
+}
+
+.navLeftTabs button {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  justify-content: left;
+  background-color: #111111;
+  width: 150px;
+  height: 43px;
+}
+
+.myLibrary {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #111111;
+  color: rgba(255,255,255,.7);
+  padding-right: 145px;
+  margin-right: 5px;
+  font-size: 12px;
 }
 
 .Sidebar {
@@ -49,17 +76,33 @@
   align-items: stretch;
 }
 
+.MenuButtonContainer{
+  margin-left: 20px;
+  margin-top: 10px;
+}
+
+.MenuButtonContainer button{
+  display: inline-block;
+  background-color: #33353a;
+  margin-right: 7px;
+  font-size: 12px;
+  text-align: center;
+  color: rgba(255,255,255,.7);
+}
+
 .Sidebar button{
   background-color: #111111;
-  color: white;
+  color: rgba(255,255,255,.7);
   display: flex;
   align-items: center;
+  height: 45px;
+  font-size: 13px;
 }
 
 .Sidebar button img{
   width: 40px;
   height: 40px;
-  margin-right: 10px;
+  margin-right: 8px;
 }
 
 .MainMenu {
@@ -71,7 +114,16 @@
   margin-right: 4px;
 }
 
+.adjustButton {
+  position: absolute;
+  top: 60px;
+  right: 20px;
+  background-color: #111111;
+  padding: 3px;
+}
+
 .SongPlayer {
+  display: flex;
   grid-column-start: 2;
   grid-column-end: 3;
   background-color: #333842;
@@ -81,3 +133,24 @@
   margin-right: 4px;
 }
 
+.songPlayerButtons {
+  display: flex;
+  margin-left: 5px;
+  justify-content: center;
+  align-items: center;
+}
+
+.songPlayerButtons button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #333842;
+  width: 40px;
+  height: 40px;
+  margin-left: 3px;
+}
+
+.songPlayerButtons button img {
+  width: 35px;
+  height: 35px;
+}
